<resources>
    <string name="app_name">cryptocurrency-charts</string>
    <string name="init_CryptoResultFromDatabase">triggerInitialRequest</string>
    <string name="searchable_hint">Search by name/symbol</string>
    <string name="get_all_coins">Getting all coins…</string>
    <string name="please_wait">Please wait</string>
    <string name="main_list">Full List</string>
    <string name="favourites">Favourites</string>
    <string name="get_all_coins_title">Get all coins</string>
    <string name="search">Search</string>
    <string name="no_internet">No internet connection</string>
    <string name="historical_data">Historical Data</string>
    <string name="reset">Reset</string>
    <string name="argument_symbol">symbol</string>
    <string name="scroll_to_first_position">Scroll to first</string>

    <!-- text values for custom radio buttons -->
    <string name="twenty_four_hours">24H</string>
    <string name="seven_days">7D</string>
    <string name="month">1M</string>
    <string name="three_months">30M</string>
    <string name="max">MAX</string>
</resources>
